--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <section>
-        <h2>Esportes</h2>
+        <h2 class="sports">Esportes</h2>
         <article>
             <img src="./imagens/futebol.jpg" alt="Bola de futebol no gramado" />
             <header>
@@ -68,7 +68,7 @@
             <a href="#" title="Leia a notícia completa">Ler mais</a>
         </article>
     </section>
-    <section>
+    <section id="economy">
         <h2>Economia</h2>
         <article>
             <img src="./imagens/dolares.jpg" alt="Muitos dólares" />
