--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Meu portal de notícias</h1>
+        <h1 class="title">Meu portal de notícias</h1>
         <nav>
             <ul>
                 <li>
