--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </nav>
         </div>
     </header>
-    <section>
+    <section id="sports">
         <div class="container">
-            <h2 class="sports">Esportes</h2>
+            <h2>Esportes</h2>
             <div class="articles">
                 <article>
                     <img src="./imagens/futebol.jpg" alt="Bola de futebol no gramado" />
