--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
                     <li>
                         <a href="#economy" title="Ir para a seção de notícias">Economia</a>
                     </li>
+                    <li>
+                        <a href="#technology" title="Ir para a seção de tecnologia">Tecnologia</a>
+                    </li>
+                    <li>
+                        <a href="#entertainment" title="Ir para a seção de entreterimento">Entreterimento</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -100,6 +106,86 @@
                     </p>
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
+            </div>
+        </div>
+    </section>
+    <section id="technology">
+        <div class="container">
+            <h2>Tecnologia</h2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/tecnologia 1.jpg" alt="Notícia Tecnologia 1" />
+                    <header>
+                        <time>03/02/2024 às 12:00</time>
+                    </header>
+                    <h3>Nova tecnologia</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/tecnologia 2.jpg" alt="Notícia Tecnologia 2" />
+                    <header>
+                        <time>03/02/2024 às 12:00</time>
+                    </header>
+                    <h3>Nova área de tecnologia</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/tecnologia 3.jpg" title="Notícia Tecnologia 3" />
+                    <header>
+                        <time>03/02/2024 às 12:00</time>
+                    </header>
+                    <h3>Confira as mais novas tecnologias</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>                
+            </div>
+        </div>
+    </section>
+    <section id="entertainment">
+        <div class="container">
+            <h2>Entreterimento</h2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/entretenimento 1.jpg" alt="Notícia Entreterimento 1" />
+                    <header>
+                        <time>03/02/2024 às 12:00</time>
+                    </header>
+                    <h3>O que ver nos cinemas</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/entretenimento 2.jpg" alt="Notícia Entreterimento 2" />
+                    <header>
+                        <time>03/02/2024 às 12:00</time>
+                    </header>
+                    <h3>Novos filmes infantis</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/entretenimento 3.jpg" title="Notícia Entreterimento 3" />
+                    <header>
+                        <time>03/02/2024 às 12:00</time>
+                    </header>
+                    <h3>Shows ao vivo em 2024</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>                
             </div>
         </div>
     </section>
